<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.detail.DetailActivity">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/rlContainerBuy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fotoDetalle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="-2dp"
                android:layout_marginBottom="0dp"
                android:scaleType="fitCenter"
                app:circularflow_defaultRadius="15dp" />

            <TextView
                android:id="@+id/btnAtras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="@color/black"
                android:textSize="15sp" />


        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/container_buy_add"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombreAsteroide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="5dp"
                android:text="@string/tvDetailProduct"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/name"
                style="@style/textViewProduct"
                android:text="@string/tvName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombreAsteroide"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/tvName"
                style="@style/textViewValueProduct"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/nombreAsteroide"
                app:layout_constraintVertical_bias="0" />


            <TextView
                android:id="@+id/price"
                style="@style/textViewProduct"
                android:text="@string/tvPrice"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/tvPrice"
                style="@style/textViewValueProduct"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/price"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/id"
                style="@style/textViewProduct"
                android:text="@string/tvId"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/tvId"
                style="@style/textViewValueProduct"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/id"
                app:layout_constraintTop_toBottomOf="@+id/price"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/stock"
                style="@style/textViewProduct"
                android:text="@string/tvStock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/id"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/tvStock"
                style="@style/textViewValueProduct"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/stock"
                app:layout_constraintTop_toBottomOf="@+id/id"
                app:layout_constraintVertical_bias="0" />


            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/poppins_regular"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStock"
                app:layout_constraintVertical_bias="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rlContainerBuy"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageView
            android:id="@+id/btnRemoveProduct"
            style="@style/btnAddAndRemove"
            android:src="@drawable/ic_iconremoveitem" />

        <TextView
            android:id="@+id/tvCountProduct"
            android:layout_width="48dp"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="18dp"
            android:layout_toEndOf="@+id/btnRemoveProduct"
            android:background="@drawable/borde_caja_text__item"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <ImageView
            android:id="@+id/btnAddProduct"
            style="@style/btnAddAndRemove"
            android:layout_toEndOf="@+id/tvCountProduct"
            android:src="@drawable/ic_additems" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuy"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            android:paddingHorizontal="35dp"
            android:text="@string/btnBuy"
            android:textColor="#C1FF9E80"
            android:textSize="15sp"
            app:cornerRadius="15dp"
            app:strokeWidth="1dp" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

